<resources>
    <string name="app_name">CompetencyApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_project">Project</string>
    <string name="title_associate">Associate</string>
    <string name="title_add_project">Add Project</string>
    <string name="title_add_associate">Add Associate</string>

    <string name="employee_id">EmployeeID</string>
    <string name="employee_name">Employee Name</string>
    <string name="band">Band</string>
    <string name="designation">Designation</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="ux">UX</string>
    <string name="tester">Tester</string>
    <string name="button_submit">SUBMIT</string>
    <string name="current_project">Current Project : </string>
    <string name="competency">Competency : </string>


    <string name="selected_item">Selected item:</string>
    <string name="button_add_project">Button</string>
    <string name="add_current_project_hint">Add current project</string>

</resources>
