<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/colorWhite"
        app:theme="@style/AppTheme.Toolbar"
        app:title="@string/title_add_associate"
        app:titleTextColor="@color/colorWhite" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmployeeID"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAssociateID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_id"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmployeeName"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmployeeID">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAssociateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmployeeBand"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmployeeName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAssociateBand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/band" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmployeeDesignation"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmployeeBand">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAssociateDesignation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/designation" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmployeeDesignation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/competency"
            android:textSize="@dimen/text_size_16" />

        <RadioButton
            android:id="@+id/radioButtonAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android" />

        <RadioButton
            android:id="@+id/radioButtoniOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ios" />

        <RadioButton
            android:id="@+id/radioButtonUX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ux" />

        <RadioButton
            android:id="@+id/radioButtonTester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tester" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_8"
        android:textSize="@dimen/text_size_16"
        android:text="@string/current_project"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCurrentProjects"
        app:layout_constraintEnd_toStartOf="@+id/spinnerCurrentProjects"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Spinner
        android:id="@+id/spinnerCurrentProjects"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonSubmitAssociate"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:background="@color/colorPrimary"
        android:text="@string/button_submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarAssociate"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>